--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,10 @@ android {
 
     defaultConfig {
         applicationId "com.scrippy3.skin4free"
-        minSdkVersion 16
+        minSdkVersion 22
         targetSdkVersion 30
         versionCode 10
-        versionName "4.1"
+        versionName '4.1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -31,6 +31,7 @@ android {
 apply plugin: 'com.google.gms.google-services'
 dependencies {
 
+    implementation 'com.google.android.gms:play-services-ads:20.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
